--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,10 @@ body {
 
 body {
 	background-image: url("./images/bg-top.svg");
+	background-position-y: -2rem;
+	background-position-x: 12rem;
 	background-repeat: no-repeat;
-	background-position: top right;
 	background-color: hsl(240, 78%, 98%);
-	background-size: 11rem;
-	background-position-x: 145%;
-	background-position-y: -5%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -188,6 +186,15 @@ li {
 	background-color: hsl(237, 63%, 64%);
 	color: white;
 	border: 3px solid white;
+}
+
+@media (min-width: 768px) {
+	body {
+		background-size: 28%;
+		background-image: url(./images/bg-top.svg), url(./images/bg-bottom.svg);
+		background-repeat: no-repeat, no-repeat;
+		background-position: top right, bottom left;
+	}
 }
 
 @media (min-width: 1200px) {
